style card, bttn-card

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <main>
-      <section>
-        <div class="products-container container">
+      <section class="products-section">
+        <div class="card-container container">
           <h1 class="products-title">Products</h1>
           <div class="products-box">
             <div class="product-container"></div>
