add favorites.js update index.js

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           <h1 class="products-title">Products</h1>
           <div class="products-box">
             <div class="product-container"></div>
+            <div class="favorite-container"></div>
           </div>
         </div>
       </section>
