add favorite.html for favorit list

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
       <section class="products-section">
         <div class="card-container container">
           <h1 class="products-title">Products</h1>
+          <a href="./favorite.html"> favorite products</a>
           <div class="products-box">
             <div class="product-container"></div>
           </div>
-          <div class="favorite-container"></div>
+          <!-- <div class="favorite-container"></div> -->
         </div>
       </section>
     </main>
