style favorite-section, add icon delete

--- a/index.html
+++ b/index.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="js/index.js" type="module"></script>
     <title>Favorites</title>
   </head>
   <body>
+    <nav class="nav-bar">
+      <div class="link-box">
+        <a href="./favorite.html" class="favr-link"> favorite products</a>
+      </div>
+    </nav>
     <main>
       <section class="products-section">
         <div class="card-container container">
           <h1 class="products-title">Products</h1>
-          <a href="./favorite.html"> favorite products</a>
           <div class="products-box">
             <div class="product-container"></div>
           </div>
@@ -20,5 +31,8 @@
         </div>
       </section>
     </main>
+    <footer class="favorite-footer">
+      <div class="footer-container"></div>
+    </footer>
   </body>
 </html>
