--- a/favorite.html
+++ b/favorite.html
@@ -4,15 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>gavorite-product</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <script src="js/index.js" type="module"></script>
   </head>
   <body>
+    <nav class="nav-bar">
+      <div class="link-box">
+        <a href="./index.html" class="favr-link"> HOME</a>
+      </div>
+    </nav>
     <main>
       <section class="favoritsection-">
         <div class="favorit-container container">
+          <h2 class="favorit-title">Favorit list</h2>
           <div class="favorite-container"></div>
         </div>
       </section>
     </main>
+    <footer class="favorite-footer">
+      <div class="footer-container"></div>
+    </footer>
   </body>
 </html>
