style page-section

--- a/page.html
+++ b/page.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css" />
     <script src="js/index.js" type="module"></script>
-</head>
-<body>
-    
-
-    <div class="product-page-container"></div>
-
-    
-</body>
+  </head>
+  <body>
+    <nav class="nav-bar">
+      <div class="link-box">
+        <a href="./index.html" class="favr-link">HOME</a>
+      </div>
+    </nav>
+    <main>
+      <section>
+        <div class="view-container container">
+            <h2 class="prod-title">View Product</h2>
+          <div class="product-page-container"></div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
