create delete bttn, looped bttn items, update localStorage

--- a/favorite.html
+++ b/favorite.html
@@ -21,7 +21,7 @@
       </div>
     </nav>
     <main>
-      <section class="favoritsection-">
+      <section class="favorit-section">
         <div class="favorit-container container">
           <h2 class="favorit-title">Favorit list</h2>
           <div class="favorite-container"></div>
