--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     <main>
       <section class="products-section">
         <div class="card-container container">
+          <div class="search-container">
+            <input type="search">
+          </div>
           <h1 class="products-title">Products</h1>
           <div class="products-box">
             <div class="product-container"></div>
