create template.js, e.target for input reate filters for for product

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       <section class="products-section">
         <div class="card-container container">
           <div class="search-container">
-            <input type="search">
+            <input type="search" id="search-input">
+            <button class="btn-search"> search</button>
           </div>
           <h1 class="products-title">Products</h1>
           <div class="products-box">
