style imput search. add toLowerCase() to searchTerm

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
       <div class="link-box">
         <a href="./favorite.html" class="favr-link"> favorite products</a>
       </div>
+      <div class="search-container">
+        <input type="search" id="search-input" />
+        <button class="btn-search">search</button>
+      </div>
     </nav>
     <main>
       <section class="products-section">
         <div class="card-container container">
-          <div class="search-container">
-            <input type="search" id="search-input">
-            <button class="btn-search"> search</button>
-          </div>
           <h1 class="products-title">Products</h1>
           <div class="products-box">
             <div class="product-container"></div>
