create category opyion, add render-filter-products template.js

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
         <a href="./favorite.html" class="favr-link"> favorite products</a>
       </div>
       <div class="search-container">
+        <select name="category" id="category">
+          <option value="all">all</option>
+          <option value="Hår">Hår</option>
+          <option value="Makeup">Makeup</option>
+          <option value="Hudpleje">Hudpleje</option>
+        </select>
+
         <input type="search" id="search-input" />
         <button class="btn-search">search</button>
       </div>
